# CacheStore

./: Cargo.toml  README.md  Rocket.toml  your_api_key.txt
.github/workflows/: apisec-scan.yml  devskim.yml  rust-clippy.yml
database/: explain.txt
database/worked/: data.txt
database/worked/yes/: data.txt
src/: functions.rs  lib.rs  main.rs  routes.rs
src/data_getting_test/: cache.txt  mod.rs
src/database_func/: mod.rs
src/files/: mod.rs  read.rs  write.rs
src/func/: mod.rs
src/func/files/: mod.rs  new_file.rs  read.rs  write.rs
src/func/http_request/: mod.rs  read.rs
src/https/: mod.rs
src/https/routes/: add_data.rs  delete.rs  delete_txt.rs  display_data.rs  functions.rs  get_data.rs  mod.rs  null_write.rs
src/https/routes/cashe/: key_val_delete.rs  key_val_read.rs  key_val_store_read.rs  mod.rs
src/https/routes/tests/: mod.rs
src/tests/: cashe_tests.rs  https_test.rs  local_test.rs  mod.rs
