[package]
name = "rust_store"
version = "0.2.1"
edition = "2021"
description = "A quick and easy database for you to use!"
license = "MIT"
repository = "https://github.com/carghai/RustStore"
homepage = "https://carghaiwebsite.web.app/#/"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 3

[dependencies]
rocket = "0.4.11"
rocket_contrib = { version = "0.4.11", features = ["json"] }
serde = { version = "1.0.144", features = ["derive"] }
reqwest = { version = "0.11.11", features = ["json"] }
serde_json = "1.0.85"
tokio = {version = "1.20.1", features = ["full"]}
better_file_maker = "0.1.8"
txt_writer = "0.1.3"